# taxonomical-preparator

./: .env.save  .gitignore  README.md  df_matcher.py  draft_list_croisee.py  environment.yml  environment_mac.yaml  pyproject.toml  test.csv
data/: manual_species.json  manual_taxon_info.json
data/in/: metadata_final.tsv  serre_5.csv  species_list.csv  species_list_croisee.tsv
src/: 01_taxo_resolver.py  01_taxo_resolver_fibl.py  02_df_matcher.py  03_dendronificator copy.py  03_dendronificator.py  dendronificator.py  df_matcher.py  draft.py  draft_list_croisee.py  format_module.py  fuzzy_matcher.py  inat_fetcher.py  inat_fetcher_bckup.py  inat_fetcher_cli.py  inat_fetcher_manual.py  inat_to_wd_fetcher.py  multiprocessor.py  openbis_register_samples.ipynb  organisms.json  taxo_explorer  taxo_explorer.R  taxo_info_fetcher.py  taxo_resolver.py  test.csv  update_db.py
